WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131974
REGRESSION (
r151839
): Subframe keeps getting mousemove events with the same coordinates after hiding a hovered element.
https://bugs.webkit.org/show_bug.cgi?id=131974
Summary
REGRESSION (r151839): Subframe keeps getting mousemove events with the same c...
Andreas Kling
Reported
2014-04-22 00:57:56 PDT
<
rdar://problem/15907469
>
Attachments
Patch
(7.56 KB, patch)
2014-04-22 01:01 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch
(7.89 KB, patch)
2014-04-22 01:22 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch
(9.62 KB, patch)
2014-04-22 12:33 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-04-22 01:01:04 PDT
Created
attachment 229868
[details]
Patch
Andreas Kling
Comment 2
2014-04-22 01:05:24 PDT
The layout test timeouts are 260ms because the fake mousemove events are sent on 250ms timers. (Urgh.)
Andreas Kling
Comment 3
2014-04-22 01:22:23 PDT
Created
attachment 229870
[details]
Patch Add a hunk to the ChangeLog about the solution as well..
Andreas Kling
Comment 4
2014-04-22 02:14:03 PDT
Comment on
attachment 229870
[details]
Patch Test has some race condition on WK2. Will fixup tomorrow.
Andreas Kling
Comment 5
2014-04-22 12:33:49 PDT
Created
attachment 229906
[details]
Patch Okay, here we go again!
Benjamin Poulain
Comment 6
2014-04-22 13:31:26 PDT
Comment on
attachment 229906
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=229906&action=review
Make sense.
> LayoutTests/fast/events/ghostly-mousemoves-in-subframe.html:75 > + }, 500);
Can you use a busy wait here instead of a 0.5s wait?
Andreas Kling
Comment 7
2014-04-22 14:54:47 PDT
(In reply to
comment #6
)
> (From update of
attachment 229906
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=229906&action=review
> > Make sense. > > > LayoutTests/fast/events/ghostly-mousemoves-in-subframe.html:75 > > + }, 500); > > Can you use a busy wait here instead of a 0.5s wait?
That'd be a bit weird, since I'm waiting for something *not* to happen. I'm gonna land this as-is, if it turns out troublesome, and you're reading this comment in the future wondering what I was thinking, sorry :|
Andreas Kling
Comment 8
2014-04-22 14:56:24 PDT
Comment on
attachment 229906
[details]
Patch Clearing flags on attachment: 229906 Committed
r167684
: <
http://trac.webkit.org/changeset/167684
>
Andreas Kling
Comment 9
2014-04-22 14:56:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug